--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
 		"vite": "^5.3.1"
 	},
 	"lint-staged": {
+		"*.{ts, tsx}": [
+			"eslint --fix"
+		],
 		"*.{js,jsx,ts,tsx,css,scss,json,md}": [
 			"prettier --write"
 		]
