feat: search images

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
 	],
 	"parser": "@typescript-eslint/parser",
 	"parserOptions": {
-		"project": "./tsconfig.app.json",
+		"project": "./tsconfig.json",
 		"tsconfigRootDir": "./",
 		"ecmaVersion": 2023,
 		"sourceType": "module"
@@ -34,6 +34,7 @@
 		"react-compiler/react-compiler": "error",
 		"@typescript-eslint/dot-notation": "error",
 		"@typescript-eslint/triple-slash-reference": "off",
+		"react/prefer-stateless-function": "off",
 		"import/extensions": [
 			"error",
 			"ignorePackages",
