--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,11 @@
 		"strict": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-		"noFallthroughCasesInSwitch": true
+		"noFallthroughCasesInSwitch": true,
+		"baseUrl": ".",
+		"paths": {
+			"@styles/*": ["src/styles/*"]
+		}
 	},
 	"include": ["src", "src/**/*.ts", "src/**/*.tsx"]
 }
