--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"lint-staged": "lint-staged"
 	},
 	"dependencies": {
+		"axios": "^1.7.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-error-boundary": "^4.0.13",
