feat: add detail card

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,8 @@
 		"react/function-component-definition": "off",
 		"react/prefer-stateless-function": "off",
 		"import/extensions": "off",
+		"jsx-a11y/click-events-have-key-events": "off",
+		"jsx-a11y/no-static-element-interactions": "off",
 		"import/order": [
 			"warn",
 			{
