--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,6 @@
 			"version": "detect"
 		}
 	},
-	"ignorePatterns": ["vite.config.ts"],
+	"ignorePatterns": ["vite.config.ts", "vitest.config.ts"],
 	"root": true
 }
