--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"format:fix": "prettier --write .",
 		"preview": "vite preview",
+		"test": "vitest",
 		"prepare": "husky install",
 		"lint-staged": "lint-staged"
 	},
@@ -20,12 +21,17 @@
 		"react-router-dom": "^6.24.1"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^6.4.6",
+		"@testing-library/react": "^16.0.0",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
 		"@types/node": "^20.14.10",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "^7.15.0",
 		"@typescript-eslint/parser": "^7.15.0",
 		"@vitejs/plugin-react": "^4.3.1",
+		"@vitest/coverage-v8": "^2.0.2",
 		"eslint": "^8.57.0",
 		"eslint-config-airbnb": "^19.0.4",
 		"eslint-config-airbnb-typescript": "^18.0.0",
@@ -38,11 +44,13 @@
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
 		"husky": "^8.0.0",
+		"jsdom": "^24.1.0",
 		"lint-staged": "^15.2.7",
 		"prettier": "^3.3.2",
 		"sass": "^1.77.7",
 		"typescript": "^5.2.2",
-		"vite": "^5.3.1"
+		"vite": "^5.3.1",
+		"vitest": "^2.0.2"
 	},
 	"lint-staged": {
 		"*.{ts, tsx}": [
